HBase Change Log
Release 0.92.3 - Unreleased
  BUG FIXES
   HBASE-6649  [0.92 UNIT TESTS] TestReplication.queueFailover occasionally fails [Part-1]
               (Devaraj Das via Stack)

  IMPROVEMENTS

  NEW FEATURE

Release 0.92.2 - September 13th, 2012
  BUG FIXES
   HBASE-5563  Add comparison of regionId to HRegionInfo#compareTo (chunhui and jmhsieh)
   HBASE-5595  Fix NoSuchMethodException in 0.92 when running on local filesystem
               (Uma Maheswara Rao G)
   HBASE-5568  Multi concurrent flushcache() for one region could cause data loss
               (Chunhui)
   HBASE-5603  rolling-restart.sh script hangs when attempting to detect expiration of
               /hbase/master znode
   HBASE-5270  Handle potential data loss due to concurrent processing of
               processFaileOver and ServerShutdownHandler (Chunhui)
   HBASE-5560  Avoid RegionServer GC caused by timed-out calls (Dhruba)
   HBASE-5586  [replication] NPE in ReplicationSource when creating a stream
               to an inexistent cluster
   HBASE-5624  Aborting regionserver when splitting region, may cause daughter
               region not assigned by ServerShutdownHandler (Chunhui Shen)
   HBASE-5596  Few minor bugs from HBASE-5209 (David S. Wang)
   HBASE-5669  AggregationClient fails validation for open stoprow scan
               (Mubarak Seyed)
   HBASE-5638  Backport HBASE-5633: NPE reading ZK config in HBase (Matteo Bertozzi)
   HBASE-4398  If HRegionPartitioner is used in MapReduce, client side configurations
               are overwritten by hbase-site.xml (Takuya Ueshin)
   HBASE-5535  Make the functions in task monitor synchronized (Liyin Tang)
   HBASE-5213  "hbase master stop" does not bring down backup masters (Gregory) 
   HBASE-5606  SplitLogManger async delete node hangs log splitting when ZK connection is lost
               (Prakash)
   HBASE-5724  Row cache of KeyValue should be cleared in readFields().
               (Teruyoshi Zenmyo)